--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 logging.level.io.netty=error
 spring.main.banner-mode=off
 spring.profiles.active=bootstrap-data
+management.endpoints.web.exposure.include=*
