add grafana and mongodb volumes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:11.0.4-jdk-stretch
 VOLUME /tmp
 ARG JAR_FILE
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=docker,bootstrap-data", "-jar", "/app.jar"]
