--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,23 @@ services:
     container_name: staci-mongo
     ports:
       - 27017:27017
+    volumes:
+      - data-volume:/data/db
 
   prometheus:
     image: my-prometheus:latest
+    container_name: staci-prometheus
     ports:
       - 9090:9090
+
+  grafana:
+    image: grafana/grafana:6.2.5
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana-volume:/var/lib/grafana
+    user: "1052276"
+
+volumes:
+  data-volume:
+  grafana-volume:
